<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F5"
    tools:context=".feature.home.NowvmActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_nowvm_statemanage1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rectangle_main_border"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/notosanskr_bold"
            android:includeFontPadding="false"
            android:lineSpacingExtra="0dp"
            android:text="@string/location_1"
            android:textColor="#191919"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/notosanskr_bold"
            android:includeFontPadding="false"
            android:lineSpacingExtra="0dp"
            android:text="@string/now_inventory"
            android:textColor="#191919"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_nowvm_NumofInventory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/notosanskr_bold"
            android:includeFontPadding="false"
            android:lineSpacingExtra="0dp"
            android:text="@string/num_inventory"
            android:textColor="#191919"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_nowvm_NumofSelling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/notosanskr_bold"
            android:includeFontPadding="false"
            android:lineSpacingExtra="0dp"
            android:text="@string/num_inventory"
            android:textColor="#191919"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nowvm_NumofInventory" />

        <TextView
            android:id="@+id/tv_nowvm_NumofCoinbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/notosanskr_bold"
            android:includeFontPadding="false"
            android:lineSpacingExtra="0dp"
            android:text="@string/num_inventory"
            android:textColor="#191919"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nowvm_NumofSelling" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/notosanskr_bold"
            android:includeFontPadding="false"
            android:lineSpacingExtra="0dp"
            android:text="@string/now_selling"
            android:textColor="#191919"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/notosanskr_bold"
            android:includeFontPadding="false"
            android:lineSpacingExtra="0dp"
            android:text="@string/coinbox"
            android:textColor="#191919"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <ImageView
            android:id="@+id/iv_nomvm_vm"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:srcCompat="@drawable/vending_blu" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/notosanskr_bold"
        android:includeFontPadding="false"
        android:lineSpacingExtra="0dp"
        android:text="@string/now_vending"
        android:textColor="#191919"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/iv_nowvm_btnback"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_nowvm_btnback"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/left" />
</androidx.constraintlayout.widget.ConstraintLayout>